[metadata]
name = userimport
# version = see setup.py
author = Jesra Tikalsky
author_email = jtikalsky@hep.wisc.edu
keywords = automation
# license = See Github
url = https://github.com/uwcms/APx-userimport
description = A tool for adding users to APx-style boards.
long_description = A tool for adding users to APx-style boards.

[options]
scripts = userimport
